--- a/biosite.css
+++ b/biosite.css
@@ -43,7 +43,7 @@ h1 {
 
 h2 {
     font-family: 'DM Serif display', 'Times New Roman', Times, serif;
-    color: olivedrab;
+    color: steelblue;
     text-transform: lowercase;
     font-size: 40px;
     letter-spacing: 10px;
