--- a/biosite.css
+++ b/biosite.css
@@ -10,7 +10,7 @@ header {
     right: 0;
     width: 100%;
     position: fixed;
-    border-bottom: solid 7px steelblue;
+    border-bottom: solid 7px olivedrab;
     padding-bottom: 25px;
     font-size: 16px;
     font-family: 'PT Sans Narrow', Arial, Helvetica, sans-serif;
